# GERSite

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  config.gers.yaml  config.yaml  environment.yml  justfile  package-lock.json  pyproject.toml  skills-lock.json
.claude/: CLAUDE.md  TODO.md
.claude/docs/: data-sources.md  data-versioning.md  package-versioning.md  partitioning-strategy.md  taxonomy-setup.md  turnover-model-methodology.md
.claude/skills/conflate-snapshots/: SKILL.md
.claude/skills/full-data-pull/: SKILL.md
.claude/skills/iterate-model-types/: SKILL.md
.claude/skills/model-history-pipeline/: SKILL.md
.claude/skills/sync-taxonomy/: SKILL.md
.claude/skills/update-site/: SKILL.md
.claude/skills/verify-pipeline-run/: SKILL.md
.github/extensions/duckdb-spatial-bugfix/: extension.mjs
.github/workflows/: copilot-setup-steps.yml  deploy-site.yml
aoi/: guam.geojson  miami_dade.geojson  puerto_rico.geojson  saipan.geojson
docs/: GERSITE_ARCHITECTURE.md  api.rst  conf.py  devcontainer.md  developer.md  index.rst  legacy_catalog.md  pyproject.md  vscode.md  workflows.rst
flows/: generate_bridges.py  generate_tiles.py  ingest_sources.py  produce_gold_layer.py
lib/: duckdb_helpers.py  scoring.py  spatial_utils.py
scripts/: _gen_bug_fixtures.py  build_taxonomy.py  check_taxonomy_sync.py  debug_gold_tiles.py  debug_resolve_geometries.py  mre_duckdb_geometry_join.py
scripts/bug_fixtures/: t1_overture_no_crs.parquet  t2_fema_epsg4326.parquet
scripts/conflation/: README.md  conflate.py  format_for_upload.py  prepare_pmtiles.py  summarize.py  upload_pmtiles_to_s3.py  upload_to_s3.py
scripts/exploratory/: bench_random_by_type.py  idealized_stability_curve.py  test_ModelFitterJAX.py  test_jax.py  test_model_fitter.py
scripts/foursquare/: download.py
scripts/models/: osm_turnover.py  test_jax.py
scripts/osm_data/: data_viz.py  download.py  download_history.py  format_tabular.py
scripts/osm_snapshot/: apply_model.py  download.py  format_for_upload.py  prepare_pmtiles.py  upload_pmtiles_to_s3.py  upload_to_s3.py
scripts/overture/: download.py
scripts/publish/: upload_to_source_coop.py
scripts/snapshots/: load_samples.py
site/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
site/public/: about.html
site/src/: App.vue  constants.js  utils.js
site/src/assets/: styles.css
site/src/components/: AoiSelector.vue  BuildingPopup.vue  MapContainer.vue  OccupancyFilter.vue  PoiPopup.vue  SourceToggle.vue
site/src/composables/: useGeocoder.js
site/src/layers/: conflatedLayer.js  femaBuildingsLayer.js  goldBuildingsLayer.js  nsiUnmatchedLayer.js  osmLayer.js  overtureBuildingsLayer.js
site/src/queries/: osmQuery.js
src/openpois/: __init__.py
src/openpois/conflation/: chunking.py  dedup_overture.py  match.py  merge.py  taxonomy.py
src/openpois/conflation/data/: match_radii.csv  taxonomy_crosswalk_openstreetmap.csv  taxonomy_crosswalk_overture_maps.csv  top_level_matches.csv
src/openpois/io/: boundary.py  credentials.py  foursquare.py  geohash_partition.py  osm_history_pbf.py  osm_snapshot.py  overture.py  pmtiles.py  source_coop.py
src/openpois/models/: diagnostics.py  jax_core.py  model_fitter.py  osm_models.py  setup.py
src/openpois/osm/: change_plots.py  format_observations.py
src/openpois/publish/: build_readme.py
src/openpois/publish/templates/: LICENSE  top_readme.md  version_readme.md.tmpl
tests/: test_chunking.py  test_constant_lambda_simulation.py  test_dedup_overture.py  test_format_observations.py  test_foursquare_download.py  test_geohash_partition.py  test_match.py  test_merge.py  test_occupancy.py  test_osm_history_pbf.py  test_osm_models.py  test_overture_download.py  test_setup.py  test_taxonomy.py  test_taxonomy_sync.py
